# green-needle

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  STATUS.md  TESTING_REPORT.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  quickstart.py  requirements-dev.txt  requirements.txt  setup.py  verify.py
.github/workflows/: ci.yml
config/: example.yaml
docs/: examples.md  setup-guide.md
scripts/: install.bat  install.sh
src/green_needle/: __init__.py  batch_processor.py  cli.py  config.py  exceptions.py  pipeline.py  recorder.py  result.py  transcriber.py  utils.py  version.py
tests/: __init__.py  test_transcriber.py
